cmake_minimum_required(VERSION 3.0.0)
project(image-blur VERSION 0.1.0 LANGUAGES C CXX)

include(CTest)
enable_testing()

find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_Include_DIRS} )

add_executable(image-blur main.cpp)

target_link_libraries( image-blur ${OpenCV_LIBS} )

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
